# My-Machine-Learning-journey-repo

./: pyproject.toml
data_analysis/: EDA_multivariate.ipynb  EDA_univariate.ipynb
encoding_data/: categorical_data_encoding.ipynb
feature_scaling/: Normalization.ipynb  standardization.ipynb
nlp/Tf-IDF/: tf-idf-implementation.ipynb
nlp/bag_of_words/: bow.ipynb
nlp/experiments/: making_embedding_layer.ipynb
nlp/nltk/: lemmatization.ipynb  stemming.ipynb  tokenization.ipynb
nlp/nltk_learning/: name-entity-recognition.ipynb  speech_taging.ipynb  text-preprocessing.ipynb
nlp/projects/: kindle_review_sentiment_analysis.ipynb  spam_ham_classification.ipynb  spam_ham_classification_using_word2vec.ipynb
nlp/word2vec/: word2vec.ipynb
projects/customer_churn_prediction/: Experiments.ipynb  hyperparametertuningann.ipynb  model.keras  prediction.ipynb  regression_model.keras  salaryRegression.ipynb
projects/simple_rnn/: prediction.ipynb  simple_rnn.ipynb
pytorch/: auto_grad.ipynb  dataloaders_nn.ipynb  linear_model.pt  minst_model.pt  minst_project.ipynb  tensor_learn.ipynb
supervisied_ml/decision_tree/: decisiontree_classifier.ipynb  decisiontree_regressor.ipynb
supervisied_ml/knn/: knn_regression.ipynb  knnclassification.ipynb
supervisied_ml/linear_regression/: multiple_linear_regression.ipynb  polynomial_regression.ipynb  simple_linear_regression.ipynb
supervisied_ml/logistic_regression/: logistic_regression.ipynb
supervisied_ml/naive_bayes/: naive.ipynb
supervisied_ml/svm/: svc.ipynb  svm_regression.ipynb
unsupervised_ml/PCA/: pca.ipynb
(+10 files in other folders)
