[project]
name = "ml-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "gensim>=4.4.0",
    "ipykernel>=7.1.0",
    "kneed>=0.8.5",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "nltk>=3.9.4",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tensorflow>=2.21.0",
    "tqdm>=4.67.3",
]
